--- a/css/style.css
+++ b/css/style.css
@@ -294,18 +294,19 @@ button {
 .banner_section {
     width: 100%;
     float: left;
-    padding: 90px 0px 145px 0px;
+    /* Padding akan disesuaikan di media query untuk mobile */
+    padding: 90px 0px 145px 0px; 
 }
 
 .banner_taital {
-    width: 30%;
+    width: 30%; /* Ini untuk desktop */
     font-size: 60px;
     color: #222222;
     font-weight: bold;
 }
 
 .banner_text {
-    width: 70%;
+    width: 70%; /* Ini untuk desktop */
     font-size: 16px;
     color: #222222;
     margin: 0px;
@@ -341,11 +342,10 @@ button {
     width: 40px;
     height: 40px;
     color: #252525;
-    /* width: auto; */
-    /* height: auto; */
     border: none;
     text-indent: 0;
-    padding-top: 25px;
+    /* padding-top akan disesuaikan untuk mobile jika perlu */
+    padding-top: 25px; 
     justify-content: center;
     align-items: center;
     font-weight: bold;
@@ -356,12 +356,12 @@ button {
 }
 
 .carousel-indicators {
-    bottom: -40px;
+    /* Posisi akan disesuaikan di media query untuk mobile */
+    bottom: -40px; 
     justify-content: left;
     margin-right: initial;
     margin-left: 0px;
-}
-
+}   
 
 /* banner section end */
 
@@ -436,6 +436,8 @@ button {
 
 /* cream section start */
 
+/* cream section start */
+
 .cream_section {
     width: 100%;
     float: left;
@@ -452,6 +454,8 @@ button {
     background-size: 100%;
     background-repeat: no-repeat;
     bottom: 80px;
+    /* Tambahkan left: 0; jika ingin di kiri, atau hapus jika tidak ingin ada di mobile */
+    /* left: 0; */ 
 }
 
 .cream_section::before {
@@ -467,30 +471,32 @@ button {
 }
 
 .cream_taital {
-    width: 67%;
+    width: 100%; /* Biarkan ini 100% agar responsif, nanti diatur oleh kolom grid parent */
     float: left;
     font-size: 40px;
     color: #373736;
     font-weight: bold;
+    margin-bottom: 5px; /* Beri jarak ke teks deskripsi */
+}
+.cream_taital2 { /* Jika ini variasi judul lain, perlakuannya sama */
+    width: 100%;
+    float: left;
+    font-size: 40px;
+    color: #373736;
+    font-weight: bold;
+    margin-bottom: 5px;
 }
 
-.cream_taital::after {
-    position: absolute;
-    content: '';
-    width: 80px;
-    height: 6px;
-    background-color: #ffd6e1;
-    bottom: 20px;
-    right: 160px;
-    border-radius: 4px;
-}
+/* Hapus ::after pada .cream_taital karena posisinya akan sulit diresponsifkan */
+/* .cream_taital2::after, .cream_taital::after { ... } */
+
 
 .cream_text {
     width: 100%;
     float: left;
     font-size: 16px;
     color: #373736;
-    margin: 0px;
+    margin: 0px 0px 30px 0px; /* Beri jarak ke produk di bawahnya */
 }
 
 .cream_section_2 {
@@ -503,21 +509,37 @@ button {
     width: 100%;
     float: left;
     background-image: linear-gradient( 0deg, #ffffff 37%, #f2f2f0 37%);
-    height: auto;
+    height: auto; /* Biarkan tinggi menyesuaikan konten */
     padding: 20px;
     box-shadow: 0px 0px 20px 10px #ededec;
+    margin-bottom: 30px; /* Beri jarak antar box jika bertumpuk di mobile */
 }
 
 .cream_box:hover {
     background-image: linear-gradient( 0deg, #ffffff 37%, #faf0c7 37%);
 }
 
+/* === PERBAIKAN UNTUK GAMBAR PRODUK === */
 .cream_img {
     width: 100%;
     text-align: center;
-    padding-bottom: 20px;
-    min-height: 210px;
+    height: 200px;      /* TENTUKAN TINGGI KONSISTEN UNTUK AREA GAMBAR */
+                        /* Sesuaikan angka ini. Ini membantu semua kartu produk terlihat seragam */
+    overflow: hidden;   /* Mencegah gambar 'bocor' jika menggunakan object-fit: cover */
+    margin-bottom: 20px; /* Ganti padding-bottom dengan margin-bottom */
 }
+
+.cream_img img.img-fluid { /* Menargetkan gambar produk setelah Anda menambahkan class img-fluid */
+    max-width: 100%;   
+    max-height: 100%;  
+    width: auto;       /* Biarkan lebar menyesuaikan aspek rasio berdasarkan tinggi */
+    height: 100%;      /* Gambar akan mencoba mengisi tinggi kontainer .cream_img */
+    object-fit: contain; /* KUNCI: Seluruh gambar terlihat, aspek rasio terjaga.
+                            Alternatif: 'cover' jika ingin mengisi area tapi mungkin terpotong. */
+    margin: 0 auto;    
+}
+/* === AKHIR PERBAIKAN GAMBAR PRODUK === */
+
 
 .price_text {
     width: 80px;
@@ -530,6 +552,9 @@ button {
     padding: 18px 15px;
     border-radius: 100px;
     font-style: italic;
+    position: relative; /* Agar bisa diatur z-index jika diperlukan */
+    z-index: 1; /* Agar di atas background box */
+    margin-top: -40px; /* Tarik ke atas agar sedikit menimpa area gambar/batas background */
 }
 
 .strawberry_text {
@@ -538,6 +563,7 @@ button {
     color: #373736;
     text-align: center;
     font-weight: bold;
+    padding-top: 15px; /* Jarak dari harga */
 }
 
 .cart_bt {
@@ -568,12 +594,13 @@ button {
     margin: 0 auto;
     text-align: center;
     padding-top: 50px;
-    display: flex;
+    display: flex; /* Dihapus float dari child, jadi parent bisa flex */
+    justify-content: center; /* Pusatkan tombol See More */
 }
 
 .seemore_bt a {
     width: 100%;
-    float: left;
+    /* float: left; Dihapus karena parent sudah flex */
     font-size: 16px;
     text-align: center;
     background-color: #fc95c4;
@@ -586,6 +613,41 @@ button {
 .seemore_bt a:hover {
     background-color: #1e1e1e;
     color: #faf8f9;
+}
+
+
+/* === MEDIA QUERY UNTUK MOBILE === */
+@media (max-width: 575.98px) {
+    .cream_section {
+        padding: 50px 0px 30px 0px;
+    }
+    .cream_taital,
+    .cream_taital2 {
+        font-size: 30px; /* Kecilkan judul di mobile */
+        text-align: center; /* Judul di tengah */
+        width: 100%;
+        float: none;
+    }
+    .cream_text {
+        text-align: center; /* Teks deskripsi di tengah */
+    }
+    /* Sembunyikan pseudo-elements dekoratif di mobile jika mengganggu layout */
+    .cream_section::after,
+    .cream_section::before {
+        display: none;
+    }
+    .cream_taital2::after, 
+    .cream_taital::after {
+        /* Atur ulang posisi garis bawah judul atau sembunyikan */
+        /* Contoh: right: 50%; transform: translateX(50%); width: 60px; */
+        display: none; /* Paling mudah disembunyikan jika rumit */
+    }
+
+    .cream_img {
+        height: 180px; /* Tinggi area gambar lebih kecil di HP */
+    }
+
+    /* Gambar akan otomatis menyesuaikan karena object-fit: contain dan img-fluid */
 }
 
 
@@ -765,6 +827,7 @@ button {
     opacity: 1;
     font-size: 30px;
     color: #ffffff;
+     z-index: 10;
 }
 
 #main_slider .carousel-control-prev:hover,
@@ -1039,4 +1102,90 @@ textarea#comment.update_mail::placeholder {
 
 .margin_top90 {
     margin-top: 90px;
+}
+
+/* ======================================================= */
+/* === CSS RESPONSIVE UNTUK BANNER (MOBILE VIEW) === */
+/* ======================================================= */
+@media (max-width: 575.98px) {
+
+    .banner_section {
+        padding: 40px 0px 50px 0px; /* Kurangi padding atas-bawah di mobile */
+    }
+
+    /* Kolom pertama (yang berisi teks dan tombol) */
+    .banner_section .carousel-item .row .col-sm-6:first-child {
+        text-align: center; /* Agar tombol juga ikut ke tengah */
+        order: 2; /* Jadikan urutan ke-2 (setelah indikator) */
+        margin-top: 20px; /* Beri jarak dari indikator di atasnya */
+    }
+
+    .banner_taital {
+        width: 100%; /* Ambil lebar penuh di mobile */
+        font-size: 32px; /* Kecilkan font judul */
+        text-align: center;
+        margin-bottom: 10px;
+    }
+
+    .banner_text {
+        width: 100%; /* Ambil lebar penuh di mobile */
+        font-size: 14px;
+        text-align: center;
+        margin-bottom: 20px;
+    }
+
+    .started_text {
+        width: auto; /* Biarkan lebar tombol menyesuaikan kontennya */
+        float: none; /* Hapus float agar bisa di-center */
+        display: inline-block; /* Agar bisa di-center dengan text-align parent */
+        padding-top: 0; /* Hapus padding-top jika sudah diatur oleh margin-bottom teks */
+    }
+
+    /* Kolom yang berisi gambar (secara HTML adalah anak kedua dari .row) */
+    .banner_section .carousel-item .row .col-sm-6:last-child {
+        order: -1; /* Pindahkan kolom gambar ini ke paling atas dalam .row */
+    }
+
+    .banner_img {
+        text-align: center; /* Pusatkan gambar di dalam kolomnya */
+        margin-bottom: 20px; /* Jarak antara gambar dan indikator di bawahnya */
+    }
+    
+    .banner_img img {
+        max-width: 80% !important; /* Paksa max-width agar lebih kecil di mobile */
+        height: auto;
+        margin: 0 auto;
+    }
+
+    /* Atur posisi indikator carousel agar berada di bawah gambar */
+    #carouselExampleIndicators .carousel-indicators {
+        position: relative; /* Kembalikan ke alur normal dokumen */
+        bottom: auto; /* Hapus properti bottom jika ada dari style desktop */
+        order: 1; /* Jadikan urutan ke-1 (setelah gambar, sebelum teks) - INI RELATIF TERHADAP SIBLINGNYA (.carousel-inner) */
+                  /* Karena .carousel-indicators adalah sibling dari .carousel-inner,
+                     dan .carousel-inner berisi .row yang sudah di-order,
+                     kita atur margin-top agar pas di bawah gambar */
+        justify-content: center;
+        margin-top: 0; /* Akan diletakkan setelah .carousel-inner (yang berisi gambar dan teks) */
+                       /* Triknya adalah .banner_img punya margin-bottom, dan .col-sm-6:first-child punya margin-top */
+        padding-left: 0;
+        margin-left: auto; /* Untuk centering jika parentnya tidak flex */
+        margin-right: auto; /* Untuk centering jika parentnya tidak flex */
+        /* Kita letakkan ini setelah .carousel-inner, jadi jaraknya dari gambar diatur oleh margin-bottom gambar */
+        /* dan jaraknya ke teks diatur oleh margin-top kolom teks */
+    }
+
+    .carousel-indicators li {
+        padding-top: 0;
+        line-height: 40px;
+        margin: 0 5px;
+    }
+
+    /* Jika ada margin negatif di slide 4, atur ulang untuk mobile */
+    .carousel-item.mt-n5 {
+        margin-top: 0 !important; 
+    }
+    .carousel-item .col-sm-6[style*="margin-top"] {
+        margin-top: 0 !important;
+    }
 }
